--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
   <link
     rel="preload"
-    href="assets/css/styles.css"
+    href="assets/css/styles.min.css"
     as='style'
     onload="this.rel='stylesheet'"
   >
